--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         New Quote
                     </button>
 
-                    <a id="tweet-quote" href="https://twitter.com/intent/tweet?text=${encodeURIComponent(this.quoteForSharing)}" target="_blank">
+                    <a id="tweet-quote" href="https://twitter.com/intent/tweet?text=${encodeURIComponent(this.quoteForSharing)}" target="_blank" rel="noopener">
                         <i class="fa-brands fa-square-x-twitter"></i>   
                         Tweet
                     </a>
